@@ -1,3 +1,8 @@
+2009-02-04  Joseph Myers  <joseph@codesourcery.com>
+
+	PR c/35433
+	* gcc.dg/init-bad-6.c: New test.
+
 2009-02-03  Paolo Bonzini  <bonzini@gnu.org>
 
 	PR c++/36897
